# git-live

./: .gitignore  CMakeLists.txt  hello.html  main.cpp
libr/: graphic.h
project/: .gitignore  CMakeLists.txt  main.cpp
project/libr/: engine.h  graphic.h  live.h
project/src/: engine.cpp  graphic.cpp  live.cpp
src/: engine.cpp  live.cpp
